--- a/styles.css
+++ b/styles.css
@@ -47,4 +47,26 @@ html {
     text-decoration: underline;
 }
 
+.home {
+  display: flex;
+  align-items: center;              /* vertical centering */
+  justify-content: space-between;   /* space between text and image */
+  height: 60vh;                     /* full screen height */        
+}
+
+.home-text {
+  text-align: left;
+  padding-left: 20px;
+}
+
+.home-img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 3px; 
+}
+
+
 
