--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ Insert body in here later
 body {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: #F0E7D5;
-    color: #384572;
+    color: #233266;
 }
 
 html {
@@ -38,7 +38,7 @@ html {
 
 .navbar li a:hover:not(.active) {
     font-size: 22px;
-    color: maroon;
+    color: rgb(95, 14, 14);
     font-weight: bold;
     text-decoration: underline;
 }
@@ -55,24 +55,42 @@ html {
   justify-content: center;
   height: 72vh;                     /* full screen height */   
   padding:0 5%;
-  gap: 65px;
-}
-
-.home-text {
-  text-align: left;
+  gap: 70px;
 }
 
 .home-text h1{
   font-size: 45px;
+  position: relative;
+  animation-name: slide-left;
+  animation-duration: 3s;
+}
+
+.home-text p{
+  position: relative;
+  animation-name: slide-left;
+  animation-duration: 2s;
 }
 
 .home-img {
-  width: 400px;
-  height: 400px;
+  position: relative;
+  width: 360px;
+  height: 360px;
   object-fit: cover;
   border-radius: 50%;
   border-style: solid;
   border-width: 3px; 
+  animation-name: slide-right;
+  animation-duration: 2.5s;
+}
+
+@keyframes slide-left{
+    0% {left:-1000px; top:0px;}
+    100% {left:0px; top:0px}
+}
+
+@keyframes slide-right{
+    0% {left: 700px; top:0px;}
+    100% {left:0px; top:0px;}
 }
 
 
