--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ html {
     display: block;
     color: #233266;
     font-size: 20px;
+    font-weight: bold;
     text-align: center;
     padding: 20px 25px;
     text-decoration: none;
