--- a/styles.css
+++ b/styles.css
@@ -27,10 +27,29 @@ html {
     background: rgba(211, 211, 211, 0.2);
 }
 
+.navbar li {
+    position: relative;
+    opacity: 0;
+    animation: slide-down 1s forwards;
+}
+
+.navbar li:nth-child(1){
+    animation-delay: 0.2s;
+}
+
+.navbar li:nth-child(2){
+    animation-delay: 0.4s;
+}
+
+.navbar li:nth-child(3){
+    animation-delay: 0.6s;
+}
+
+
 .navbar li a {
     display: block;
     color: #233266;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
     text-align: center;
     padding: 20px 25px;
@@ -38,7 +57,6 @@ html {
 }
 
 .navbar li a:hover:not(.active) {
-    font-size: 22px;
     color: rgb(95, 14, 14);
     font-weight: bold;
     text-decoration: underline;
@@ -56,20 +74,21 @@ html {
   justify-content: center;
   height: 67vh;                     /* full screen height */   
   padding:0 5%;
-  gap: 70px;
+  gap: 80px;
 }
 
 .home-text h1{
-  font-size: 45px;
   position: relative;
+  font-size: 60px;
   animation-name: slide-left;
-  animation-duration: 2.5s;
+  animation-duration: 1.75s;
 }
 
 .home-text p{
   position: relative;
+  font-size: 20px;
   animation-name: slide-left;
-  animation-duration: 2s;
+  animation-duration: 1.5s; 
 }
 
 .home-img {
@@ -80,18 +99,24 @@ html {
   border-radius: 50%;
   border-style: solid;
   border-width: 3px; 
+  border-color: rgb(95, 14, 14);
   animation-name: slide-right;
-  animation-duration: 2.5s;
+  animation-duration: 1.5s;
 }
 
 @keyframes slide-left{
-    0% {left:-1000px; top:0px;}
-    100% {left:0px; top:0px}
+    0% {opacity: 0; left:-200px; top:0px;}
+    100% {opacity: 1; left:0px; top:0px}
 }
 
 @keyframes slide-right{
-    0% {left: 700px; top:0px;}
-    100% {left:0px; top:0px;}
+    0% {opacity: 0; left: 200px; top:0px;}
+    100% {opacity: 1; left:0px; top:0px;}
+}
+
+@keyframes slide-down{
+    0% {opacity: 0; top:-50px;}
+    100% {opacity: 1; top:0px;}
 }
 
 
