--- a/styles.css
+++ b/styles.css
@@ -34,14 +34,18 @@ html {
 }
 
 .navbar li:nth-child(1){
-    animation-delay: 0.2s;
+    animation-delay: 0s;
 }
 
 .navbar li:nth-child(2){
-    animation-delay: 0.4s;
+    animation-delay: 0.2s;
 }
 
 .navbar li:nth-child(3){
+    animation-delay: 0.4s;
+}
+
+.navbar li:nth-child(4){
     animation-delay: 0.6s;
 }
 
