--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ section {
 
 .hidden {
     opacity: 0;
-    transition: all 1.5s;
+    transition: all 3s;
     pointer-events: none;
 }
 
@@ -59,13 +59,18 @@ section {
     top: 0;
     width: 100%;
     z-index: 1000;
-    background: rgba(211, 211, 211, 0.2);
+    background: #F0E7D5;
 }
 
 .navbar li {
     position: relative;
     opacity: 0;
     animation: slide-down 1s forwards;
+}
+
+.no-animation li {
+    opacity: 1;
+    animation: none;
 }
 
 .navbar li:nth-child(1){
@@ -128,7 +133,7 @@ section {
 .home-text h1{
     position: relative;
     margin-bottom: 15px;
-    font-size: 60px;
+    font-size: 80px;
     text-align: left;
     animation-name: slide-left;
     animation-duration: 1.75s;
@@ -137,7 +142,7 @@ section {
 .home-text p{
     position: relative;
     margin-top: 0;
-    font-size: 20px;
+    font-size: 22px;
     text-align: left;
     animation-name: slide-left;
     animation-duration: 1.5s; 
