--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     color: #233266;
 }
 
-html {
+html{
     scroll-behavior: smooth;
 }
 
@@ -19,7 +19,7 @@ section {
 
 .hidden {
     opacity: 0;
-    transition: all 3s;
+    transition: all 2s;
     pointer-events: none;
 }
 
@@ -59,7 +59,7 @@ section {
     top: 0;
     width: 100%;
     z-index: 1000;
-    background: #d4cdbe;
+    background: #F0E7D5;
 }
 
 .navbar li {
@@ -127,7 +127,7 @@ section {
     flex-direction: row;
     align-items: center;
     gap: 50px;
-    border: 1px solid #233266;
+    border: 3px solid #233266;
     border-radius: 100px;
     padding: 80px;
 }
@@ -209,8 +209,11 @@ section {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* responsive */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* responsive */
   gap: 30px;
+  max-width: 900px;   /* keeps it from stretching too wide */
+  margin: 0 auto;
+  width: 100%;
 }
 
 .project-card {
@@ -262,12 +265,12 @@ section {
 }
 
 .project-tags span {
-  background: rgba(255,255,255,0.08);
+  background: #233266;
   border: 1px solid rgba(255,255,255,0.2);
   padding: 5px 12px;
   border-radius: 9999px;
   font-size: 14px;
-  color: #fff;
+  color: #F0E7D5;
 }
 
 .project-link {
