--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ section {
     animation-duration: 1.5s;
 }
 
-#skills {
+/* #skills {
   padding: 80px 10%;
   text-align: center;
 }
@@ -187,7 +187,7 @@ section {
 
 .skills-wheel li {
   font-size: 22px;
-  line-height: 60px;   /* give more vertical spacing */
+  line-height: 60px;
   opacity: 0.4;
   transform: scale(0.8);
   transition: all 0.4s ease;
@@ -199,7 +199,7 @@ section {
   opacity: 1;
   transform: scale(1.2);
   color: #233266;
-}
+} */
 
 #timeline {
   padding: 80px 10%;
@@ -231,13 +231,13 @@ section {
 
 .timeline-item {
   position: relative;
-  width: 50%;
+  width: 70%;
   padding: 20px 40px;
   box-sizing: border-box;
 }
 
 .timeline-item:nth-child(odd) {
-  left: 0;
+  right: 20%;
   text-align: right;
 }
 
@@ -288,7 +288,7 @@ section {
   transform: translateX(0);
 }
 
-/* Optional: slight stagger for nicer effect */
+/* stagger effect */
 #experience.show .timeline-item:nth-child(1) { transition-delay: 0.0s; }
 #experience.show .timeline-item:nth-child(2) { transition-delay: 0.5s; }
 #experience.show .timeline-item:nth-child(3) { transition-delay: 1s; }
@@ -310,20 +310,6 @@ section {
     animation-duration: 1.5s;
     animation-delay: 0.2s;
     animation-fill-mode: forwards;
-}
-
-/* Connect links*/
-.rsocials img:hover {
-    cursor: pointer;
-}
-
-.csocials {
-    padding: 10px;
-}
-
-/* Skills section */
-#skills {
-   padding-top: 10px;
 }
 
 /* Projects section */
@@ -421,5 +407,11 @@ section {
     padding-top: 50px;
 }
 
+.rsocials img:hover {
+    cursor: pointer;
+}
 
+.csocials {
+    padding: 10px;
+}
 
